--- a/catalog/catalog.html
+++ b/catalog/catalog.html
@@ -8,24 +8,24 @@
 <body>
     <h3>Меню:</h3>
     <ol type="a">
-        <li><a href="/index.html">Главная</a></li>
+        <li><a href="../index.html">Главная</a></li>
         <li>Каталог</li>
         <li>Контакты</li>
     </ol>
     <h1>Каталог</h1>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem repellat culpa sequi magnam, quam animi consequuntur provident sint fuga enim unde autem voluptatum cum quo facere ab accusantium. Minus repudiandae, quibusdam debitis labore iusto, incidunt aperiam perferendis ab illo tempore commodi cupiditate distinctio voluptate quisquam error nemo, earum delectus cumque! Voluptates, consectetur? Obcaecati ea eaque temporibus maxime consequuntur beatae ex perspiciatis autem omnis consectetur ipsa libero expedita quae nostrum excepturi placeat, dolorem earum. Eligendi quibusdam aliquid, praesentium nam mollitia deleniti, itaque tenetur vero fuga quos quaerat dolorum delectus facilis voluptatibus. Corrupti architecto facere adipisci repellendus suscipit! Esse voluptatibus, quod excepturi similique facere iusto eaque, alias ea, voluptatem ad deserunt et quaerat nesciunt commodi? Dignissimos aspernatur, excepturi aliquid, asperiores et ut corrupti esse eveniet necessitatibus deserunt cupiditate dicta modi earum, porro explicabo ullam iusto? Quos expedita ullam dignissimos? Consectetur similique voluptatem pariatur voluptas debitis quos, mollitia nulla tenetur, delectus saepe quisquam!</p>
     <ol type="a">
-        <li><a href="/img/prot_1.jpeg">Elite</a></li>
+        <li><a href="../img/prot_1.jpeg">Elite</a></li>
         <li>Протеин Elite</li>
         <li>Сывороточный протеин с содержанием белка 85%. 2293g</li>
     </ol> 
     <ol type="a">
-        <li><a href="/img/prot_2.jpeg">SUN PREMIUM</a></li>
+        <li><a href="../img/prot_2.jpeg">SUN PREMIUM</a></li>
         <li>Протеин SUN PREMIUM</li>
         <li>Сывороточный протеин с содержанием белка 80%. 2250g</li>
     </ol>
     <ol type="a">
-        <li><a href="/img/prot_3.jpeg">SUN GOLD</a></li>
+        <li><a href="../img/prot_3.jpeg">SUN GOLD</a></li>
         <li>Протеин SUN GOLD</li>
         <li>Сывороточный протеин с содержанием белка 90%. 2820g</li>
     </ol>
